--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-grabbing-box": "^1.0.0",
+    "vue-router": "^3.6.5",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
